pointer based math for 2d arrays so that 2d arrays can be passed as a pointer. Finishing up cross correlation and circular buffer

--- a/Software/Dependencies/PiedPiper/.vscode/settings.json
+++ b/Software/Dependencies/PiedPiper/.vscode/settings.json
@@ -6,6 +6,9 @@
         "limits": "cpp",
         "random": "cpp",
         "utility": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "compare": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp"
     }
 }
