pied piper library

--- a/Software/Dependencies/PiedPiper/.vscode/settings.json
+++ b/Software/Dependencies/PiedPiper/.vscode/settings.json
@@ -9,6 +9,8 @@
         "xutility": "cpp",
         "compare": "cpp",
         "cmath": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "istream": "cpp",
+        "*.tcc": "cpp"
     }
 }
