--- a/Software/Dependencies/PiedPiper/.vscode/settings.json
+++ b/Software/Dependencies/PiedPiper/.vscode/settings.json
@@ -18,6 +18,7 @@
         "format": "cpp",
         "ranges": "cpp",
         "variant": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cstdlib": "cpp"
     }
 }
